test/corpus/types.txt
===============
integral types
===============

class Beyonce {
  int formation() {
    int x;
    unsigned int x;
    byte x;
    short x;
    unsigned short x;
    long x;
    unsigned long x;
    char x;
  }
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (integral_type)
        (identifier)
        (formal_parameters)
        (block
          (local_variable_declaration
            (integral_type)
              (variable_declarator (identifier)))
          (local_variable_declaration
            (signed_integral_type (signed_type) (integral_type))
              (variable_declarator (identifier)))
          (local_variable_declaration
            (integral_type)
              (variable_declarator (identifier)))
          (local_variable_declaration
            (integral_type)
              (variable_declarator (identifier)))
          (local_variable_declaration
            (signed_integral_type (signed_type) (integral_type))
              (variable_declarator (identifier)))
          (local_variable_declaration
            (integral_type)
              (variable_declarator (identifier)))
          (local_variable_declaration
            (signed_integral_type (signed_type) (integral_type))
              (variable_declarator (identifier)))
          (local_variable_declaration
            (integral_type)
              (variable_declarator (identifier))))))))

=====================
floating point types
=====================

class Beyonce {
  int formation() {
    float x;
    double x;
  }
}

---

(program
  (class_declaration
    (identifier)
    (class_body
      (method_declaration
        (integral_type)
        (identifier)
        (formal_parameters)
        (block
          (local_variable_declaration
            (floating_point_type)
            (variable_declarator (identifier)))
          (local_variable_declaration
            (floating_point_type)
            (variable_declarator (identifier))))))))
